add view for nameHide

--- a/NODEJS/nj_dom_olldsh/app/app/views/dashboardConfig/editDashboardConfig.ejs
+++ b/NODEJS/nj_dom_olldsh/app/app/views/dashboardConfig/editDashboardConfig.ejs
@@ -262,6 +262,10 @@
             <div class="col-md-3 col-sm-3 col-xs-3">
                 <input style="padding-top: 5px; width: 20px; height: 20px;" type="checkbox" ng-model="dashboardConfig.autoShow" />
             </div>
+            <div class="col-md-2 col-sm-3 col-xs-3" style="margin-top: 5px; padding: 0;">隐藏Dashboard名称</div>
+            <div class="col-md-3 col-sm-3 col-xs-3">
+                <input style="padding-top: 5px; width: 20px; height: 20px;" type="checkbox" ng-model="dashboardConfig.nameHide" />
+            </div>
         </div>
         <!--ends-->
 
