--- a/NODEJS/nj_dom_olldsh/app/app/views/components/dashboardPanel.html
+++ b/NODEJS/nj_dom_olldsh/app/app/views/components/dashboardPanel.html
@@ -19,7 +19,7 @@
     <div style="display: flex;flex-direction: column;flex-grow:1; overflow-x:hidden;overflow-y:auto; " class="content-panel">
         <div  ui-grid="gridResult" ng-if="panelConfig.chartType =='表格 Table'" ui-grid-resize-columns ui-grid-move-columns ui-grid-pagination style="position:relative; height:100%;width:100%;">
         </div>
-         <!--bs table-->
+         <!--define bs table-->
         <div style="position:relative; height:500px; width:100%;" ng-if="panelConfig.chartType =='红绿灯表格 Table2'">
             <div class="workspaceContainer" ng-repeat="wk in workspaces" ng-show="currentWorkspace == wk">
                 <table bs-table-control="wk.bsTableControl"></table>
