--- a/NODEJS/nj_dom_olldsh/app/app/views/dashboardConfig/editPanelConfig.html
+++ b/NODEJS/nj_dom_olldsh/app/app/views/dashboardConfig/editPanelConfig.html
@@ -183,7 +183,7 @@ options = [
 
                         <!--<div ng-if="!showJs">-->
                         <!--这里是为Table类型的图表加显示JS代码框-->
-                        <div ng-if="!showJs && !isTableType1 && ！isTableType2">
+                        <div ng-if="!showJs && !isTableType1 && !isTableType2">
                             <fieldset ng-if="showAxis">
                                 <h3 class="group-head"><b>轴</b></h3>
                                 <div ui-grid="uigridConfig.axisConfig"  style="height:150px;" ui-grid-edit  ui-grid-move-columns class="ee-grid-auto-height"/>
