set all dashboard adjustable initially

--- a/NODEJS/nj_dom_olldsh/app/app/views/dashboardConfig/editDashboardConfig.ejs
+++ b/NODEJS/nj_dom_olldsh/app/app/views/dashboardConfig/editDashboardConfig.ejs
@@ -254,9 +254,9 @@
             <div class="col-md-2 col-sm-2 col-xs-2">
                 <input style="padding-top: 5px;width:20px;height: 20px;" type="checkbox" ng-model="dashboardConfig.activePanels"/>
             </div>
-            <div class="col-md-2 col-sm-2 col-xs-2" style="margin-top: 5px; padding: 0;">允许修改布局</div>
+            <div class="col-md-2 col-sm-2 col-xs-2" style="margin-top: 5px; padding: 0;">不可修改布局</div>
             <div class="col-md-2 col-sm-2 col-xs-2">
-                <input style="padding-top: 5px; width: 20px; height: 20px;" type="checkbox" ng-model="dashboardConfig.beAdjustable" />
+                <input style="padding-top: 5px; width: 20px; height: 20px;" type="checkbox" ng-model="dashboardConfig.unAdjustable" />
             </div>
         </div>
 
