--- a/NODEJS/nj_dom_olldsh/app/app/views/dashboard/viewDashboard.ejs
+++ b/NODEJS/nj_dom_olldsh/app/app/views/dashboard/viewDashboard.ejs
@@ -149,7 +149,7 @@
 </body>
 
 <script>
-        if(!dashboardConfig.beAdjustable){
+        if(dashboardConfig.unAdjustable){
             document.getElementById("chartBorderHide").style.cssText = "display: flex;flex-direction: column;overflow-y: hidden; border:hidden;";
         }
 </script>
